--- a/tailwind.mobile.css
+++ b/tailwind.mobile.css
@@ -31,4 +31,4 @@
 @import "src/main/frontend/components/file_sync.css";
 @import "src/main/frontend/components/table.css";
 
-@import-glob "src/main/capacitor/**/[!_]*.css";
+@import-glob "src/main/mobile/**/[!_]*.css";
