fix(mobile): button styles

--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -36,6 +36,13 @@ html.plt-capacitor.plt-android {
   }
 }
 
+html.plt-mobile {
+  button {
+    /* fix ionic default style */
+    border-style: solid;
+  }
+}
+
 html.has-mobile-keyboard {
   .ion-page:not(.ion-page-hidden) {
     & > ion-content::part(scroll) {
