--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -57,6 +57,10 @@ html {
       #mobile-editor-toolbar {
         background: var(--ls-secondary-background-color);
       }
+
+      .BottomSheet-handle {
+        @apply bg-gray-03;
+      }
     }
   }
 }
@@ -376,7 +380,7 @@ html[data-silk-native-page-scroll-replaced=false] .app-silk-index-scroll-view {
     }
 
     .ui__input {
-      @apply border-none bg-gray-04 pl-10 outline-none ring-0;
+      @apply border-none dark:bg-gray-02 bg-gray-04 pl-10 outline-none ring-0;
 
       outline-offset: 0;
       box-shadow: none;
