--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -59,12 +59,14 @@
 }
 
 .left-sidebar-inner {
-  @apply relative h-full pt-3 overflow-y-auto overflow-x-hidden transition-transform;
-  @apply transform-gpu translate-x-[-100%] z-[3] antialiased;
+  &.as-container {
+    @apply relative h-full pt-3 overflow-y-auto overflow-x-hidden transition-transform;
+    @apply transform-gpu translate-x-[-100%] z-[3] antialiased;
 
-  width: var(--ls-left-sidebar-sm-width);
-  background-color: var(--left-sidebar-bg-color);
-  border-right: 1px solid var(--lx-gray-03, var(--ls-tertiary-background-color));
+    width: var(--ls-left-sidebar-sm-width);
+    background-color: var(--left-sidebar-bg-color);
+    border-right: 1px solid var(--lx-gray-03, var(--ls-tertiary-background-color));
+  }
 
   > .wrap {
     @apply flex flex-col relative w-full mt-6;
